sfdx-source/force-app/main/default/objects/OIAttributes__mdt/OIAttributes__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13227 : Onboarding Inputs Epic</description>
    <label>OIAttributes</label>
    <pluralLabel>OIAttributes</pluralLabel>
</CustomObject>