sfdx-source/force-app/main/default/objects/OIAttributes__mdt/fields/Field_length__c.field-meta.xml
<CustomField>
    <fullName>Field_length__c</fullName>
    <label>Field length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>