sfdx-source/force-app/main/default/objects/OIAttributes__mdt/listViews/All_Column.listView-meta.xml
<ListView>
    <fullName>All_Column</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Picklist_Values__c</columns>
    <columns>Field_length__c</columns>
    <columns>Decimal_Places__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Column</label>
</ListView>